--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<li><a href="https://www.google.de" target="_blank" title="mehr über Christin">Christian Haft</a>, Uralt, Erlangen</li>
 				<li><a href="https://www.google.de" target="_blank" title="mehr über Mohammed">Mohammed Hashimi</a>, 22, Monnemer</li>
 			</ul>
-			<img class="mitarbeiterbilder" src="img/christian.png">
+			<img class="mitarbeiterbilder" src="img/Christian.png">
 			<p class="name">Christian</p>
 			<img class="mitarbeiterbilder" src="img/mohammed.png">
 			<p class="name">Mohammed</p>
