--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
 				<li><a href="https://www.google.de" target="_blank" title="mehr über Christin">Christian Haft</a>, Uralt, Erlangen</li>
 				<li><a href="https://www.google.de" target="_blank" title="mehr über Mohammed">Mohammed Hashimi</a>, 22, Monnemer</li>
 			</ul>
+			<div class="bildergrid">
 			<img class="mitarbeiterbilder" src="img/Christian.png">
-			<p class="name">Christian</p>
 			<img class="mitarbeiterbilder" src="img/mohammed.png">
+			<p class="name">Christian</p>
 			<p class="name">Mohammed</p>
+			</div>
 		</div>
 		<footer>
 			<ul>
