--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
 			<ul>
 				<li><a href="https://www.google.de" target="_blank" title="mehr über Christin">Christian Haft</a>, Uralt, Erlangen</li>
 				<li><a href="https://www.google.de" target="_blank" title="mehr über Mohammed">Mohammed Hashimi</a>, 22, Monnemer</li>
+				<br>
 			</ul>
 			<div class="bildergrid">
 			<img class="mitarbeiterbilder" src="img/Christian.png">
+			<h2 class="caption"><a href="">Christian</a></h2>
 			<img class="mitarbeiterbilder" src="img/mohammed.png">
-			<p class="name">Christian</p>
-			<p class="name">Mohammed</p>
+		 	<h2 class="caption"><a href="">Mohammed</a></h2>
 			</div>
 		</div>
 		<footer>
